--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,9 @@
 
 <div class="row">
   <div class="col-sm-6">
-    <h2>node-google-url</h2>
-    <label>https://www.npmjs.com/package/google-url</label>
-    <label>https://github.com/BlueRival/node-google-url</label>
+    <h2>google-url</h2>
+    <label><a href="https://www.npmjs.com/package/google-url" target="_blank">https://www.npmjs.com/package/google-url</a></label>
+    <label><a href="https://github.com/BlueRival/node-google-url" target="_blank">https://github.com/BlueRival/node-google-url</a></label>
 
     <div class="list-group">
       <a class="list-group-item" href="/google-url/shorten">Shorten</a>
@@ -17,8 +17,8 @@
 
   <div class="col-sm-6">
     <h2>goo.gl</h2>
-    <label>https://www.npmjs.com/package/goo.gl</label>
-    <label>https://github.com/kaimallea/node-googl</label>
+    <label><a href="https://www.npmjs.com/package/goo.gl" target="_blank">https://www.npmjs.com/package/goo.gl</a></label>
+    <label><a href="https://github.com/kaimallea/node-googl" target="_blank">https://github.com/kaimallea/node-googl</a></label>
 
     <div class="list-group">
       <a class="list-group-item" href="/googl/shorten">Shorten</a>
